force-app/main/default/objects/PropertyMedia__c/PropertyMedia__c.object-meta.xml
<CustomObject>
    <label>Property Media</label>
    <nameField>
        <label>Property Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>