force-app/main/default/objects/PropertyMedia__c/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <inlineHelpText>full URL to folder where media item is stored</inlineHelpText>
    <label>BaseUrl</label>
    <type>Url</type>
</CustomField>