force-app/main/default/objects/PropertyMedia__c/fields/ExternalLink__c.field-meta.xml
<CustomField>
    <fullName>ExternalLink__c</fullName>
    <label>External Link</label>
    <type>Url</type>
</CustomField>