force-app/main/default/objects/PropertyMedia__c/fields/ExternalThumbnailUrl__c.field-meta.xml
<CustomField>
    <fullName>ExternalThumbnailUrl__c</fullName>
    <label>ExternalThumbnailUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>