force-app/main/default/objects/PropertyMedia__c/fields/FilenameUrlEncoded__c.field-meta.xml
<CustomField>
    <fullName>FilenameUrlEncoded__c</fullName>
    <label>FilenameUrlEncoded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>