force-app/main/default/objects/PropertyMedia__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(  ThumbnailURL__c ,    Filename__c   ,100,100  )</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>