force-app/main/default/objects/PropertyMedia__c/fields/IsExternalLink__c.field-meta.xml
<CustomField>
    <fullName>IsExternalLink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternalLink</label>
    <type>Checkbox</type>
</CustomField>