force-app/main/default/objects/PropertyMedia__c/fields/IsOnExpose__c.field-meta.xml
<CustomField>
    <fullName>IsOnExpose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expose</label>
    <type>Checkbox</type>
</CustomField>