force-app/main/default/objects/PropertyMedia__c/fields/IsOnPortalFeed__c.field-meta.xml
<CustomField>
    <fullName>IsOnPortalFeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Feeds</label>
    <type>Checkbox</type>
</CustomField>