force-app/main/default/objects/PropertyMedia__c/fields/IsOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>IsOnWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website</label>
    <type>Checkbox</type>
</CustomField>