force-app/main/default/objects/PropertyMedia__c/fields/LayoutOnExpose__c.field-meta.xml
<CustomField>
    <fullName>LayoutOnExpose__c</fullName>
    <label>LayoutOnExpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>