force-app/main/default/objects/PropertyMedia__c/fields/LayoutOnPortalFeed__c.field-meta.xml
<CustomField>
    <fullName>LayoutOnPortalFeed__c</fullName>
    <label>LayoutOnPortalFeed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Sidebar</fullName>
            </value>
            <value>
                <fullName>Featured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>