force-app/main/default/objects/PropertyMedia__c/fields/LayoutOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>LayoutOnWebsite__c</fullName>
    <label>LayoutOnWebsite</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>