force-app/main/default/objects/PropertyMedia__c/fields/MidresURL__c.field-meta.xml
<CustomField>
    <fullName>MidresURL__c</fullName>
    <formula>IF( Category__c == &apos;Images&apos;,
IF(IsExternalLink__c,ExternalLink__c,BaseUrl__c &amp; &quot;/midres/&quot; &amp; FilenameUrlEncoded__c),
IF( Category__c == &apos;Videos&apos;,
IF(IsExternalLink__c,
IF(OR(CONTAINS(ExternalLink__c,&apos;youtube&apos;),CONTAINS(ExternalLink__c,&apos;vimeo&apos;)),
ExternalThumbnailUrl__c,
&apos;https://s3.amazonaws.com/propertybase-resources/asset_upload/video_100.png&apos;
),
&apos;https://s3.amazonaws.com/propertybase-resources/asset_upload/video_100.png&apos;),
IF( Category__c == &apos;Documents&apos;,
&apos;https://s3.amazonaws.com/propertybase-resources/asset_upload/document_100.png&apos;,
&apos;&apos;
)
)
)</formula>
    <label>MidresURL</label>
    <type>Text</type>
</CustomField>