force-app/main/default/objects/PropertyMedia__c/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <label>Mime Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>image/gif</fullName>
            </value>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
            <value>
                <fullName>application/x-shockwave-flash</fullName>
            </value>
            <value>
                <fullName>application/octet-stream</fullName>
            </value>
            <value>
                <fullName>application/pdf</fullName>
            </value>
            <value>
                <fullName>application/mspowerpoint</fullName>
            </value>
            <value>
                <fullName>application/msword</fullName>
            </value>
            <value>
                <fullName>application/msexcel</fullName>
            </value>
            <value>
                <fullName>application/zip</fullName>
            </value>
            <value>
                <fullName>text/comma-separated-values</fullName>
            </value>
            <value>
                <fullName>text/css</fullName>
            </value>
            <value>
                <fullName>text/html</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>text/richtext</fullName>
            </value>
            <value>
                <fullName>text/rtf</fullName>
            </value>
            <value>
                <fullName>text/xml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>