force-app/main/default/objects/PropertyMedia__c/fields/OriginalFilename__c.field-meta.xml
<CustomField>
    <fullName>OriginalFilename__c</fullName>
    <label>Original Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>