force-app/main/default/objects/PropertyMedia__c/fields/OriginalHeight__c.field-meta.xml
<CustomField>
    <fullName>OriginalHeight__c</fullName>
    <description>Original media height in pixel</description>
    <label>Original Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>