force-app/main/default/objects/PropertyMedia__c/fields/OriginalWidth__c.field-meta.xml
<CustomField>
    <fullName>OriginalWidth__c</fullName>
    <description>Original media width in pixel</description>
    <label>Original Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>