force-app/main/default/objects/PropertyMedia__c/fields/Property_hz__c.field-meta.xml
<CustomField>
    <fullName>Property_hz__c</fullName>
    <label>Property</label>
    <referenceTo>Property_hz__c</referenceTo>
    <relationshipLabel>Property Media</relationshipLabel>
    <relationshipName>PropertyMedia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>