force-app/main/default/objects/PropertyMedia__c/fields/Size1__c.field-meta.xml
<CustomField>
    <fullName>Size1__c</fullName>
    <label>Size1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>