force-app/main/default/objects/PropertyMedia__c/fields/SortOnExpose__c.field-meta.xml
<CustomField>
    <fullName>SortOnExpose__c</fullName>
    <defaultValue>9999</defaultValue>
    <label>Sort on Expose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>