force-app/main/default/objects/PropertyMedia__c/fields/SortOnPortalFeed__c.field-meta.xml
<CustomField>
    <fullName>SortOnPortalFeed__c</fullName>
    <defaultValue>9999</defaultValue>
    <label>Sort on Portal Feed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>