force-app/main/default/objects/PropertyMedia__c/fields/SortOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>SortOnWebsite__c</fullName>
    <defaultValue>9999</defaultValue>
    <label>Sort on Website</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>