force-app/main/default/objects/PropertyMedia__c/fields/SystemExternalSource__c.field-meta.xml
<CustomField>
    <fullName>SystemExternalSource__c</fullName>
    <label>SystemExternalSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>