force-app/main/default/objects/PropertyMedia__c/fields/SystemIsDemoImage__c.field-meta.xml
<CustomField>
    <fullName>SystemIsDemoImage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsDemoImage</label>
    <type>Checkbox</type>
</CustomField>