force-app/main/default/objects/PropertyMedia__c/fields/SystemIsIdx__c.field-meta.xml
<CustomField>
    <fullName>SystemIsIdx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsIdx</label>
    <type>Checkbox</type>
</CustomField>