force-app/main/default/objects/PropertyMedia__c/fields/SystemStorageFolder__c.field-meta.xml
<CustomField>
    <fullName>SystemStorageFolder__c</fullName>
    <label>SystemStorageFolder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>