force-app/main/default/objects/PropertyMedia__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Floorplan</fullName>
            </value>
            <value>
                <fullName>Virtual Tour</fullName>
            </value>
            <value>
                <fullName>360tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>