force-app/main/default/objects/PropertyMedia__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>IF ( IsExternalLink__c ,  ExternalLink__c , BaseUrl__c   &amp; &quot;/&quot; &amp;  FilenameUrlEncoded__c)</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>